Version 1.11.1+svn:
 * AI:
   * Experimental Multiplayer AI
     * Improve recruitment, notably first turn choices and units with poison
     * Improved selection of units for village stealing
     * Remove dependency on AI-demos add-on
 * Campaigns:
   * Son of the Black Eye:
     * Prevent infinite loop if fewer than two transport ships (bug #20389)
 * Graphics:
   * Fix layering error with bridges
 * Language and i18n:
   * Updated translations: Italian, Portuguese, Portuguese (Brazil)
 * User interface:
   * Allow copying the selection in the old (default) lobby using
     Ctrl+C/Command+C, as well as manipulating the selection with Shift+<Arrow
     keys> (bug #5877)
 * WML engine:
   * [unit_overlay] and [remove_unit_overlay] now return a more meaningful
     error message if the image= key is missing
   * When not replacing values, [effect] apply_to=defense will now modify
     absolute values instead of signed values (bug #20242). This allows for
     cleaner WML when the unit type is not necessarily known in advance.
 * Miscellaneous and bug fixes:
   * The undo stack is preserved across a save-reload.
   * Removed several unused private member variables.
   * Fixed the present in-game command line autocompletion feature so it
     actually works at all
   * Removed recognition of the --smallgui command line option, which has been
     superfluous since 1.9.5.

Version 1.11.1:
 * AI:
   * New AI: Experimental AI
     * Improved recruitment, castle and village management over current default AI
 * Campaigns:
   * Dead Water:
     * Removed duplicated loyalty overlay (that now is in core), and used
       {IS_LOYAL} macro
     * Stunned units are now marked with a status icon
   * Delfador's Memoirs
     * Add dummy side to cutscene to avoid crash at end of story part
       (bug #20208)
   * Eastern Invasion:
     * New set of portraits
   * Legend of Wesmere:
     * Scenario 02: Replaced the moveto events for checking the