@@ -8,6 +8,9 @@ Version 1.11.1+svn:
      * Improve recruitment, notably first turn choices and units with poison.
      * Improve selection of units for village stealing.
      * Remove dependency on AI-demos add-on.
+     * Fix bug when playing on maps with a turn limit.
+     * Fix bug handling regeneration.
+     * Minor improvements in switching between castles.
 
  * Campaigns:
    * Son of the Black Eye:
